# Robot

./: README.md
ROS/: ROS入门教程.ipynb
ROS/ROS2智能机器人开发实践/NodeWorkSpace/src/example_cpp/: CMakeLists.txt  package.xml
ROS/ROS2智能机器人开发实践/NodeWorkSpace/src/example_python/: package.xml  setup.py
ROS/ROS2智能机器人开发实践/NodeWorkSpace/src/learning_interface/: CMakeLists.txt
ROS/ROS2智能机器人开发实践/NodeWorkSpace/src/learning_pkg_cpp/: CMakeLists.txt  package.xml
ROS/workspace/C++/: hello  hello.cpp  rebuild.cpp
ROS/workspace/chapt3_ws/src/example_ros2_interfaces/: CMakeLists.txt
ROS/workspace/chapt3_ws/src/example_ros2_interfaces/srv/: MoveRobot.srv
亚博智能小车开发/01_开发前准备/: tutorial.md
亚博智能小车开发/01_开发前准备/source/: SET_Camera.py  config_robot.py
亚博智能小车开发/02_机器人控制/: 01_机器人控制.md
亚博智能小车开发/03_激光雷达使用/01_避障-跟踪-警卫/: tutorial.md
亚博智能小车开发/03_激光雷达使用/02_巡逻/: tutorial.md
亚博智能小车开发/03_激光雷达使用/05_Navigation2导航与避障/: Navigation2导航.md  雷达建图导航注意事项.txt
亚博智能小车开发/03_激光雷达使用/06_ROS Robot App建图/: ROS Robot App建图.md
亚博智能小车开发/03_激光雷达使用/07_ROS Robot APP导航/: ROS Robot APP导航.md
亚博智能小车开发/04_机器人视觉交互/1.颜色追踪/: 颜色追踪.docx  颜色追踪.md
亚博智能小车开发/04_机器人视觉交互/2.物体识别追踪/: 物体追踪.docx  物体追踪.md
亚博智能小车开发/04_机器人视觉交互/3.人脸识别追踪/: 人脸识别追踪.docx  人脸识别追踪.md
亚博智能小车开发/04_机器人视觉交互/4.自动驾驶巡线/: 巡线自动驾驶.docx  巡线自动驾驶.md
亚博智能小车开发/04_机器人视觉交互/5.二维码运动控制/: 二维码运动控制.docx  二维码运动控制.md
亚博智能小车开发/04_机器人视觉交互/6.手势控制小车基础运动/: 手势控制小车基础运动.docx  手势控制小车基础运动.md
亚博智能小车开发/04_机器人视觉交互/7.手掌控制小车运动/: 手掌控制小车运动.docx  手掌控制小车运动.md
亚博智能小车开发/04_机器人视觉交互/8.手势控制小车动作组/: 手势控制小车动作组.docx  手势控制小车动作组.md
亚博智能小车开发/04_机器人视觉交互/9.手掌控制二维云台舵机/: 手掌控制二维云台舵机.docx  手掌控制二维云台舵机.md
(+83 files in other folders)
